--- a/partials/header.html
+++ b/partials/header.html
@@ -8,8 +8,8 @@
       </div>
     </div>
     <nav class="menu">
-      <a class="active" href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a class="active" href="/index.html">Home</a>
+      <a href="/pages/about.html">About</a>
     </nav>
   </div>
 </header>
