--- a/partials/header.html
+++ b/partials/header.html
@@ -10,6 +10,7 @@
     <nav class="menu">
       <a class="active" href="/index.html">Home</a>
       <a href="/pages/about.html">About</a>
+      <div data-include="partials/follow-card.html"></div>
     </nav>
   </div>
 </header>
