Add Hunger in North Texas event page with RSVP QR code and announcement card

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container nav">
+  <div class="header-container">
     <div class="brand">
       <div class="logo"></div>
       <div>
@@ -8,9 +8,9 @@
       </div>
     </div>
     <nav class="menu">
-      <a class="active" href="/index.html">Home</a>
+      <a href="/index.html">Home</a>
       <a href="/pages/about.html">About</a>
-      <div data-include="partials/follow-card.html"></div>
+      <a href="/pages/hunger-in-texas.html">Hunger in Texas</a>
     </nav>
   </div>
 </header>
